hooks/template/rc-aspnet-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rcaspnetHelm
  name: rcaspnetHelm
  namespace: rc-namespace
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rcaspnetHelm
---
